infra/nginx-depl.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: letsencrypt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-depl
  namespace: letsencrypt
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-srv
spec:
  selector:
    app: nginx
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
