infra/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    cert-manager.io/issuer: ca-issuer
spec:
  tls:
    - secretName: ticketing-dev-tls
      hosts:
        - ticketing.dev
  rules:
    - host: ticketing.dev
      http:
        paths:
          - backend:
              serviceName: nginx-dpl
              servicePort: 80
